# mkxp-z-tests

./: .gitignore  meson.build  meson_options.txt  mkxp.json
.github/workflows/: autobuild.yml
assets/: meson.build
binding/: binding-mri.cpp  meson.build
linux/: AppRun  Makefile  install.sh  make_appimg.sh  meson.build  mkxp-z.desktop  ruby-extconf-openssl.patch  vars.sh
macos/: Info.plist  setup.command
macos/Dependencies/: .gitignore  Brewfile  arm64.make  common.make  make_macuniversal.sh  setup.sh  x86_64.make
macos/config/: Info.plist  InfoAssets.plist  mkxp-z.Intel.xcconfig  mkxp-z.Universal.xcconfig  mkxp-z.xcconfig  steamshim.xcconfig
macos/dependencies/: make_universal.sh
macos/mkxp-z.xcodeproj/: project.pbxproj
macos/mkxp-z.xcodeproj/xcshareddata/xcschemes/: Intel (Steam).xcscheme  Intel.xcscheme  Universal (Steam).xcscheme  Universal.xcscheme  steamshim.xcscheme
shader/: meson.build
src/: main.cpp  meson.build
steamshim/: steamshim_parent.cpp
windows/: Makefile  install.sh  meson.build  mkxpz.manifest  msys-detect.rb  resource-mkxpz.rc  resource-steamshim.rc  resource.h  vars.sh
